[gd_scene load_steps=6 format=1]

[ext_resource path="res://ui/GodoM.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/change_skill_button.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.219608, 0.294118, 0.368627, 1 )
light_color = Color( 0.219608, 0.294118, 0.368627, 1 )
dark_color = Color( 0.219608, 0.294118, 0.368627, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]

font/size = 12
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 1 )

[node name="Change_BG" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 330.0
margin/right = 400.0
margin/bottom = 640.0
custom_styles/panel = SubResource( 1 )

[node name="Change_skill" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 26.0
margin/top = 66.0
margin/right = 386.0
margin/bottom = 116.0

[node name="title" type="Label" parent="Change_skill"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 5.0
margin/right = 354.0
margin/bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "Select skill to be replaced"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="."]

rect/min_size = Vector2( 70, 80 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 164.0
margin/top = 146.0
margin/right = 234.0
margin/bottom = 226.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Archers"
flat = false
clip_text = true
script/script = ExtResource( 2 )

[connection signal="pressed" from="Button" to="Button" method="_on_Button_pressed"]


